--- a/overlay-evolution/packages/apps/Settings/res/values/evolution_strings.xml
+++ b/overlay-evolution/packages/apps/Settings/res/values/evolution_strings.xml
@@ -6,7 +6,7 @@
 <resources>
 
     <string name="build_device_url">https://t.me/EvolutionXPixel8</string>
-    <string name="build_maintainer_summary">Anierin Bliss</string>
-    <string name="build_maintainer_donate_url">https://paypal.me/anierinb</string>
+    <string name="build_maintainer_summary">Logan Humbert</string>
+    <string name="build_maintainer_donate_url">https://paypal.me/logaming</string>
 
 </resources>
